--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,12 +1,6 @@
-documents:
-    resource: "@DocumentsBundle/Resources/config/routing.yml"
-    prefix:   /
-
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
-
-# app/config/routing.yml
 
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
@@ -27,3 +21,6 @@ fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
     prefix: /profile
 
+documents:
+    resource: "@DocumentsBundle/Resources/config/routing.yml"
+    prefix: /documents
