--- a/src/DocumentsBundle/Resources/config/routing.yml
+++ b/src/DocumentsBundle/Resources/config/routing.yml
@@ -1,3 +1,4 @@
 documents_homepage:
     path:     /
-    defaults: { _controller: DocumentsBundle:Default:index }
+    defaults: { _controller: DocumentsBundle:Document:index }
+
