--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,8 +2,6 @@ app:
     resource: '@AppBundle/Controller/'
     type: annotation
 
-# app/config/routing.yml
-
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
 
@@ -23,3 +21,6 @@ fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
     prefix: /profile
 
+documents:
+    resource: "@DocumentsBundle/Resources/config/routing.yml"
+    prefix: /documents
