--- a/src/MessagerieBundle/Resources/config/routing.yml
+++ b/src/MessagerieBundle/Resources/config/routing.yml
@@ -1,6 +1,6 @@
 messagerie_homepage:
     path:     /
-    defaults: { _controller: MessagerieBundle:Default:index }
+    defaults: { _controller: MessagerieBundle:Default:message }
 
 messagerie_new_messages:
     path: /new
